@@ -141,6 +141,10 @@ Working version
   distributable compiler).
   (David Allsopp and Mark Shinwell, review by Gabriel Scherer)
 
+- #10242: Added convenience pretty printer for Either.t in the Format module.
+  (Oghenevwogaga Ebresafe, review by Nicolás Ojeda Bär,
+  Gabriel Scherer and Xavier Van de Woestyne)
+
 ### Other libraries:
 
 - #10047: Add `Unix.realpath`
